[gd_scene format=3 uid="uid://bpp7p7rel3xdk"]

[ext_resource type="Script" uid="uid://b7kni22ltwn35" path="res://scripts/walter.gd" id="1_ohqcf"]
[ext_resource type="Texture2D" uid="uid://d0k2213kgubfs" path="res://sprites/4 - Percy/Hurt (32 x 32).png" id="2_078ya"]
[ext_resource type="Texture2D" uid="uid://w262x7ioirxu" path="res://sprites/4 - Percy/Idle (32 x 32).png" id="2_m8tt5"]
[ext_resource type="Texture2D" uid="uid://debf4mp6eywir" path="res://sprites/4 - Percy/Landing (32 x 32).png" id="3_nb86f"]
[ext_resource type="Texture2D" uid="uid://dridjjqfumpk7" path="res://sprites/4 - Percy/Falling (32 x 32).png" id="4_6m81k"]
[ext_resource type="Texture2D" uid="uid://cm446cretm0fj" path="res://sprites/1 - Penguin/Jump (16 x 16).png" id="7_8p1fe"]
[ext_resource type="Texture2D" uid="uid://bgpe3of0wwaf8" path="res://sprites/1 - Penguin/Belly_Sliding (16 x 16).png" id="8_t0020"]
[ext_resource type="Texture2D" uid="uid://bonqbk8afghag" path="res://sprites/1 - Penguin/Waddling (16 x 16).png" id="9_t77fv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y541m"]
radius = 6.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0aqms"]
atlas = ExtResource("2_078ya")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_141kv"]
atlas = ExtResource("3_nb86f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p1fe"]
atlas = ExtResource("4_6m81k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0020"]
atlas = ExtResource("2_m8tt5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t77fv"]
atlas = ExtResource("2_m8tt5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1as1r"]
atlas = ExtResource("2_m8tt5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxcjp"]
atlas = ExtResource("2_m8tt5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rss68"]
atlas = ExtResource("2_m8tt5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovkx5"]
atlas = ExtResource("2_m8tt5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg668"]
atlas = ExtResource("2_m8tt5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljvr6"]
atlas = ExtResource("2_m8tt5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3fmf"]
atlas = ExtResource("2_m8tt5")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgcc0"]
atlas = ExtResource("7_8p1fe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdegp"]
atlas = ExtResource("8_t0020")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrosi"]
atlas = ExtResource("8_t0020")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi0w0"]
atlas = ExtResource("8_t0020")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b65tw"]
atlas = ExtResource("9_t77fv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pih8c"]
atlas = ExtResource("9_t77fv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_clqgm"]
atlas = ExtResource("9_t77fv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tvx2"]
atlas = ExtResource("9_t77fv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdle1"]
atlas = ExtResource("9_t77fv")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oymiy"]
atlas = ExtResource("9_t77fv")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pih8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aqms")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_141kv")
}],
"loop": true,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p1fe")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0020")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t77fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1as1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxcjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rss68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovkx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg668")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljvr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3fmf")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgcc0")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdegp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrosi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi0w0")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b65tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pih8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clqgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tvx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oymiy")
}],
"loop": true,
"name": &"wolk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_no378"]
size = Vector2(12, 15)

[node name="Player" type="CharacterBody2D" unique_id=1989633027 groups=["Player"]]
position = Vector2(176, 120)
collision_layer = 2
collision_mask = 13
script = ExtResource("1_ohqcf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=367950223]
shape = SubResource("CapsuleShape2D_y541m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=88931036]
z_index = 1
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_pih8c")
animation = &"duck"
autoplay = "idle"

[node name="hitbox" type="Area2D" parent="." unique_id=1530978513]
collision_layer = 2
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" unique_id=1645052347]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_no378")
debug_color = Color(0.9992406, 0, 0.13277727, 0.41960785)

[node name="ReloadTimer" type="Timer" parent="." unique_id=359030424]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=1543248216]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
